2009-05-13  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/JNLPSplashScreen.java: New file. This new class
	is responsible for displaying the splash screen.
	* rt/net/sourceforge/jnlp/Launcher.java (launchApplication): Show a splash
	screen if specified in the JNLP file while loading the remote jars.
	* rt/net/sourceforge/jnlp/cache/DefaultDownloadIndicator.java (getListener):
	Reposition the frame at the bottom right corner of the screen.

2009-05-13  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-liveconnect.patch: Re-added.
	* HACKING: liveconnect patch is not obsolete.

2009-05-13  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-enum-bug-181.patch: Removed.

2009-05-13  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-certbundle.patch: Removed.
	* patches/icedtea-liveconnect.patch: Removed.

2009-05-13  Lillian Angel  <langel@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java
	(PluginAppletSecurityContext): Added comment.	
	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java
	(checkPermission): Fixed style.

2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Added check for home dir. Return null if homeDir
	not found in system properties.

2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Added null check.

2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Set basedir for netx applications to ~/.netx,
	rather than asking. Now consistant with the plugin.
	* rt/net/sourceforge/jnlp/runtime/InstallDialog.java: Removed.

2009-05-08  Gary Benson  <gbenson@redhat.com>

	* Makefile.am: Always apply Zero and Shark patches.
	* patches/icedtea-test-atomic-operations.patch: Only test on Zero.
	* patches/icedtea-eclipse-hotspot-6614100-7b24.patch: Removed.
	* HACKING: Updated.	
