@@ -1,3 +1,11 @@
+2009-05-14  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Use HotSpot from the new HotSpot Express
+	master repository.
+	* hotspot.map:
+	Bump changeset and md5sum to hs14b15.
+
 2009-05-13  Omair Majid  <omajid@redhat.com>
 
 	* rt/net/sourceforge/jnlp/JNLPSplashScreen.java: New file. This new class
